ingress-jenkins.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
   - host: jenkins.juanballesteros.engineer
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: jenkins
               port:
                 number: 8080
